# roku-plex-nfc

./: .gitignore  LICENSE  README.md  config.example.yaml  nfc-tv.service  pyproject.toml
nfc_tv/: __init__.py  __main__.py  app.py  daemon.py  nfc.py  plex.py  register.py  state.py
nfc_tv/routers/: api.py  ui.py
nfc_tv/static/: style.css
nfc_tv/templates/: base.html  cards.html  dashboard.html  register.html
